<resources>
    <string name="app_name">Quizolog</string>

    <string name="login_card_welcome_message">Welcome!</string>
    <string name="login_card_username_message">Email</string>
    <string name="username_hint">Enter your Email adress...</string>
    <string name="username_title">Username</string>
    <string name="login_card_password_message">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="username_placeholder">Enter your username...</string>
    <string name="login_card_login_message">Login</string>
    <string name="guest_login_button_message">Offline Guest Login</string>
    <string name="login_card_register_message">Registration</string>
    <string name="register_card_button_message">Register</string>
    <string name="login_card_button_message">Login</string>
    <string name="login_card_forgot_message">Forgot your password?</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_settings">Settings</string>
    <string name="bottom_menu_statistika">Statistics</string>
    <string name="bottom_menu_logout">Log out</string>

    <string name="login_invalid_credentials_error_message">Invalid credentials!</string>
    <string name="login_empty_field_error_message">Blak fields are not allowed!</string>
    <string name="login_invalid_email_error_message">Entered email is not valid!</string>


    <string name="preference_num_of_questions_title">Number of questions per quiz</string>
    <string name="preference_num_of_questioms_sumary">Choose how many questions from each cathegory do you want per quiz.</string>
    <string name="preference_language_title">Language</string>
    <string name="preference_language_sumary">Change language to Serbian.</string>
    <string name="preferences_chache_title">Chaching</string>
    <string name="preferences_chache_sumart">Enabling or disablig chaching mode.</string>
    <string name="preferences_on">On</string>
    <string name="preferences_off">Off</string>
    <string name="preferences_language_english">English</string>
    <string name="preferences_language_serbian">Serbian</string>

    <string name="next_question_string">Next question</string>
    <string name="correct_answer_message">Correct!</string>
    <string name="wrong_answer_message">Wrong! Correct answer is </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="home_fragment_start_new_quiz_button_text">Let\'s play!</string>
    <string name="title_activity_quiz_game" translatable="false">QuizGameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="capital_city_explanation_text">Capitol city of this coutry is:</string>
    <string name="neigbour_countries_explanation_text">Neighbouring countries are:</string>
    <string name="hint">hint</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment</string>

    <string name="flags_question_text">This flag belongs to:</string>
    <string name="heritage_question_text">This heritage place is located in:</string>
    <string name="points_text">POINTS:</string>

    <string name="check_entry_button_text">Check</string>

    <string name="finish_quiz_button_text">Finish quiz</string>
    <string name="share_on_facebook_button_text">Share result on Facebook!</string>
    <string name="result_message">Result</string>
    <string name="social_media_share_message">Share your result!</string>

    <string name="news_main_title">News</string>
    <string name="statistics_main_title">Statistics</string>


    <string name="clear_entry">clear</string>
    <string name="space_button_text">space</string>
    <string name="title_activity_maps" translatable="false">Map</string>

    <!-- FACEBOOK API STRINGS -->
    <string name="facebook_app_id" translatable="false">1117782528746399</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1117782528746399</string>
    <string name="hashtag_quizolog">#Quizolog</string>
    <string name="results_message">Hey! I just finished this quiz game and scored </string>
    <string name="chek_out_message"> Check out this app on Google Play by clicking link below!</string>

    <!-- pitanje_card -->
    <string name="pitanje_card_correct_answer">Corect answer: </string>
    <string name="pitanje_card_your_answer">Your answer: </string>

    <string name="empty_statistics_message">There are no saved results. Play now to get golden medal!</string>


    <string name="tip_pitanja_glavni_grad">Capital city</string>
    <string name="tip_pitanja_zastava">Country falg</string>
    <string name="tip_pitanja_susjedne_drzave">Neighbouring countries</string>
    <string name="tip_pitanja_znamenitost">Heritage place</string>

    <string name="tekst_pitanja_glavni_grad">What is the capital city of </string>
    <string name="tekst_pitanja_zastava">To which country does this flag belong? </string>
    <string name="tekst_pitanja_susjedne_drzave">What are the neigbouring countries of </string>
    <string name="tekst_pitanja_znamenitost">Where is the heritage place from the image located?</string>

    <string name="tekst_neodgovoreno_pitanje">Not answered</string>
    <string name="empty_news_message">There are no articles for this city</string>
    <string name="on_restapi_error_response">There was an error in getting articles from News API</string>
    <string name="progress_bar_title">Loading news...</string>

    <string name="question_not_answered">Not answered</string>

    <string name="no_internet_available_message">No internet connection available! Make sure you are connected to the internet.</string>
    <string name="no_internet_available_message_login">No internet connection available! Make sure you are connected to the internet or try offline login!</string>

</resources>