<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_quiz_question_background"
    tools:context=".TipPitanjaZnamenitostFragment">


    <ImageView
        android:id="@+id/imgHeritage"
        style="@style/HeritageImageStyle"
        android:src="@drawable/great_wall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txbHeritageName"
        style="@style/QuestionTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The Great Wall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHeritage" />

    <TextView
        android:id="@+id/textView3"
        style="@style/AnswerMessageText"
        android:layout_width="285dp"
        android:layout_height="32dp"
        android:text="@string/heritage_question_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txbHeritageName"/>

    <Button
        android:id="@+id/btnAnswer1"
        style="@style/AnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/answer_button_top_margin"
        android:text="russia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnAnswer2"
        style="@style/AnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/answer_button_top_margin"
        android:text="greece"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnswer1" />

    <Button
        android:id="@+id/btnAnswer3"
        style="@style/AnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/answer_button_top_margin"
        android:text="estonia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnswer2" />

    <Button
        android:id="@+id/btnAnswer4"
        style="@style/AnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/answer_button_top_margin"
        android:text="germany"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnswer3" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnswer4"
        tools:src="@drawable/ic_baseline_check_circle_outline_24" />

    <TextView
        android:id="@+id/txvCorectnessMessage"
        style="@style/AnswerMessageText"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong_answer_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        app:layout_constraintBottom_toTopOf="@+id/btnNextQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnNextQuestion"
        style="@style/NextQuestionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>